Finished all student views

--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="{% static 'css/login.css' %}">
     <link rel="stylesheet" href="{% static 'css/logout.css' %}">
     <link rel="stylesheet" href="{% static 'css/test.css' %}">
-    <link rel="stylesheet" href="{% static 'css/new.css' %}">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
 
     <!-- Materialize Icons -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
