--- a/templates/student-hw-view.html
+++ b/templates/student-hw-view.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load crispy_forms_tags %}
 {% block content %}
 <div class="test-result-whole">
     <nav>
@@ -8,15 +9,25 @@
     </nav>
 
     <div class="hw-main container">
-        <h5 class="hw-title">{{title}}</h5>
+        <h3 class="hw-title bree">{{title}}</h3>
         <br>
-        <div class="box">
+        <div class="hw-box">
             <h6 class="left">Class: {{classroom}}</h6>
             <h6 class="right">Deadline: {{deadline}}</h6>
         </div>
         <br>
-        <div class="desc">{{desc}}</div><br>
-        <a href='' class="waves-effect waves-light btn"><i class="material-icons left">insert_drive_file</i>Homework File</a>
+        <div class="hw-desc">
+            <h5>Description:</h5>
+            <p>{{desc}}</p></div><br>
+        <a href="{{hwfile}}" class="waves-effect waves-light btn"><i class="material-icons left">insert_drive_file</i>Homework File</a>
+        <form action="" method="post" enctype="multipart/form-data">
+            {% csrf_token %}
+            {{form|crispy}}
+            <button class="btn-flat white-text blue accent-4 waves-effect waves-light" type="submit" name="action">Return Homework
+                    <i class="material-icons right">send</i>
+                </button>
+        </form>
+
     </div>
 </div>
 
