--- a/templates/student-test-result.html
+++ b/templates/student-test-result.html
@@ -10,6 +10,8 @@
     <div class="container">
         {% if message %}
             <h6 class="message">{{message}}</h6>
+            <br/>
+            <h6 class="center"><a href="{{test_link}}">Attend test now</a> </h6>
         {% endif %}
     </div>
     <div class="container test-result-frame">
