--- a/templates/base.html
+++ b/templates/base.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="{% static 'css/logout.css' %}">
     <link rel="stylesheet" href="{% static 'css/test.css' %}">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'css/new1.css' %}">
 
     <!-- Materialize Icons -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
