--- a/templates/student-hw-view.html
+++ b/templates/student-hw-view.html
@@ -7,6 +7,12 @@
         <a href="{% url 'home' %}" class="brand-logo"><i class="material-icons">class</i> Classroom</a>
         </div>
     </nav>
+    <div class="container">
+        {% if message %}
+            <h6 class="message">{{message}}</h6>
+            <br/>
+        {% endif %}
+    </div>
 
     <div class="hw-main container">
         <h3 class="hw-title bree">{{title}}</h3>
@@ -19,10 +25,12 @@
         <div class="hw-desc">
             <h5>Description:</h5>
             <p>{{desc}}</p></div><br>
+
         <a href="{{hwfile}}" class="waves-effect waves-light btn"><i class="material-icons left">insert_drive_file</i>Homework File</a>
         <form action="" method="post" enctype="multipart/form-data">
             {% csrf_token %}
             {{form|crispy}}
+            <!-- <input type="file" name="hwfile"> -->
             <button class="btn-flat white-text blue accent-4 waves-effect waves-light" type="submit" name="action">Return Homework
                     <i class="material-icons right">send</i>
                 </button>
