--- a/templates/base.html
+++ b/templates/base.html
@@ -53,6 +53,8 @@
         $(document).ready(function(){
             $('.tabs').tabs();
             $('select').formSelect();
+            $('.slider').slider({fullWidth: true});
+            $('.carousel.carousel-slider').carousel({fullWidth: true, fullHeigth: true});
         })
     </script>
 </body>
